<resources>
    <string name="app_name">DotPainter2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="GPS">GPS</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Altitude">Altitude</string>
    <string name="Accuracy">Accuracy</string>


</resources>
