<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity1">

    <TextView android:text="@string/Accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:id="@+id/Accel"
        android:textStyle="bold"
        />


    <TextView android:text="@string/X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Accel"
        android:textSize="8pt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/XLabel"
        />

    <TextView android:text="@string/Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/XLabel"
        android:textSize="8pt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/YLabel"
        />

    <TextView android:text="@string/Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/YLabel"
        android:textSize="8pt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/ZLabel"
        />


    <EditText
        android:id="@+id/xInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/XLabel"
        android:layout_below="@+id/Accel"
        android:layout_marginLeft="10pt"
        />
    <EditText
        android:id="@+id/yInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/YLabel"
        android:layout_below="@+id/xInput"
        android:layout_marginLeft="10pt"
        />
    <EditText
        android:id="@+id/zInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ZLabel"
        android:layout_below="@+id/yInput"
        android:layout_marginLeft="10pt"
        />

    <TextView android:text="@string/GPS"
        android:layout_below="@+id/zInput"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:id="@+id/GPS"
        android:textStyle="bold"
        />

    <TextView android:text="@string/Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GPS"
        android:textSize="8pt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/Lat"
        />

    <EditText
        android:id="@+id/latInput"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Lat"
        android:layout_below="@+id/GPS"
        android:layout_marginLeft="10pt"
        />

    <TextView android:text="@string/Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Lat"
        android:textSize="8pt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/Long"
        />
    <EditText
        android:id="@+id/longInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Long"
        android:layout_below="@+id/Lat"
        android:layout_marginLeft="10pt"
        />

    <TextView android:text="@string/Altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Long"
        android:textSize="8pt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/Alt"
        />
    <EditText
        android:id="@+id/AltInput"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Alt"
        android:layout_below="@+id/Long"
        android:layout_marginLeft="10pt"
        />
    <TextView android:text="@string/Accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Alt"
        android:textSize="8pt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/Accuracy"
        />
    <EditText
        android:id="@+id/AccInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/Accuracy"
        android:layout_below="@+id/Alt"
        android:layout_marginLeft="10pt"
        />

</RelativeLayout>
